# mcp_server

./: .env.template  .gitignore  README.md  main.py  math_mcp.py  newsnow_mcp.py  pyproject.toml  requirements.txt  thumbnail_mcp.py  weather_mcp.py  wechat_api_bak.py  wechat_mcp_bak.py
Dify示例工作流/: 12306_mcp.yml  file_weather_mcp.yml  local_add_mcp.yml  local_weather_mcp.yml  wx_message.yml  高德地图_agent.yml
clients/: __init__.py  basic_client.py  react_agent_client.py
services/: __init__.py  filesystem_service.py  love_letter_service.py  math_service.py  thumbnail_service.py  weather_service.py
